--- a/src/app/components/category/category-list/category-list.component.html
+++ b/src/app/components/category/category-list/category-list.component.html
@@ -1,1 +1,27 @@
-<p>category-list works!</p>
+<div class="p-6 bg-white rounded shadow">
+  <div class="flex justify-between items-center mb-4">
+    <h2 class="text-xl font-bold">Categories</h2>
+    <a routerLink="/categories/new" class="btn-primary">Add Category</a>
+  </div>
+  <table class="min-w-full table-auto border-collapse border border-gray-200">
+    <thead>
+    <tr class="bg-gray-100">
+      <th class="border border-gray-300 p-2 text-left">ID</th>
+      <th class="border border-gray-300 p-2 text-left">Name</th>
+      <th class="border border-gray-300 p-2 text-left">Description</th>
+      <th class="border border-gray-300 p-2">Actions</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let category of categories" class="hover:bg-gray-50">
+      <td class="border border-gray-300 p-2">{{ category.id }}</td>
+      <td class="border border-gray-300 p-2">{{ category.name }}</td>
+      <td class="border border-gray-300 p-2">{{ category.description || '-' }}</td>
+      <td class="border border-gray-300 p-2 text-center space-x-2">
+        <a [routerLink]="['/categories/edit', category.id]" class="text-blue-600 hover:underline">Edit</a>
+        <button (click)="deleteCategory(category.id!)" class="text-red-600 hover:underline">Delete</button>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
